# HandySLAM

./: .gitignore  .gitmodules  CMakeLists.txt  Config.h.in  README.adoc  build.sh  iphone.yaml
include/: Dataloader.h  DataloaderScanNet.h  DataloaderStray.h  Initializer.h  Output.h  Profile.h  VolumeBuilder.h  util.h
profiles/: iphone16pro-camchain-imucam.yaml  iphone16pro-imu.yaml
profiles/iphone16pro/: iphone16pro-camchain-imucam.yaml  iphone16pro-imu.yaml  iphone16pro-results-imucam.txt
scripts/: calibrate_helper.sh  calibrate_stray_with_aprilgrid.sh  calibrate_stray_with_checkboard.sh  calibrate_with_aprilgrid.sh  calibration_start.sh  calibration_with_aprilgrid.sh  infer_scannetpp_scan.py  pose_graph_stray.py
scripts/util/: calibrate_docker.sh  calibrate_docker_start.sh  calibrate_with_aprilgrid_docker.sh  split_frames.py
src/: Dataloader.cpp  DataloaderScanNet.cpp  DataloaderStray.cpp  Initializer.cpp  Output.cpp  Profile.cpp  VolumeBuilder.cpp  main.cpp
